--- a/qa/suites/rados/perf/workloads/fio_4K_rand_rw.yaml
+++ b/qa/suites/rados/perf/workloads/fio_4K_rand_rw.yaml
@@ -1,5 +1,6 @@
 tasks:
 - cbt:
+    force-branch: wip-nitzan-skip-exist
     benchmarks:
       librbdfio:
         op_size: [4096]
@@ -13,6 +14,13 @@ tasks:
         osd_ra: [4096]
         pool_profile: 'rbd'
         log_avg_msec: 100
+    monitoring_profiles:
+      perf:
+        nodes:
+          - osds
+        perf_cmd: 'perf'
+        args: 'stat -p {pid} -o {perf_dir}/perf_stat.{pid}'
+        pid_glob: ceph-osd.*.pid
     cluster:
       user: 'ubuntu'
       osds_per_node: 3
@@ -22,3 +30,4 @@ tasks:
           pg_size: 128
           pgp_size: 128
           replication: 3
+      pid_dir: /var/run/ceph
