--- a/qa/suites/rados/perf/workloads/fio_4M_rand_read.yaml
+++ b/qa/suites/rados/perf/workloads/fio_4M_rand_read.yaml
@@ -1,5 +1,6 @@
 tasks:
 - cbt:
+    force-branch: wip-nitzan-skip-exist
     benchmarks:
       librbdfio:
         op_size: [4194304]
@@ -22,3 +23,10 @@ tasks:
           pg_size: 128
           pgp_size: 128
           replication: 3
+    monitoring_profiles:
+      perf:
+        nodes:
+          - osds
+        perf_cmd: 'perf'
+        args: 'stat -p {pid} -o {perf_dir}/perf_stat.{pid}'
+        pid_glob: ceph-osd.*.pid
