--- a/qa/suites/rados/perf/workloads/radosbench_4M_rand_read.yaml
+++ b/qa/suites/rados/perf/workloads/radosbench_4M_rand_read.yaml
@@ -1,5 +1,6 @@
 tasks:
 - cbt:
+    force-branch: wip-nitzan-skip-exist
     benchmarks:
       radosbench:
         concurrent_ops: 4
@@ -22,3 +23,10 @@ tasks:
           pg_size: 256
           pgp_size: 256
           replication: 'replicated'
+    monitoring_profiles:
+      perf:
+        nodes:
+          - osds
+        perf_cmd: 'perf'
+        args: 'stat -p {pid} -o {perf_dir}/perf_stat.{pid}'
+        pid_glob: ceph-osd.*.pid
