--- a/qa/suites/rados/monthrash/ceph.yaml
+++ b/qa/suites/rados/monthrash/ceph.yaml
@@ -3,6 +3,7 @@ overrides:
     conf:
       client:
         debug monc: 20
+        debug objecter: 20
         debug ms: 1
       mon:
         mon min osdmap epochs: 25
